--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,8 +5,8 @@
                 Tickets
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="eventtickets-link">
-                <a href="" class="dropdown-item">Hiking Events</a>
-                <a href="" class="dropdown-item">Mud Runs</a>
+                <a href="{% url 'products' %}?category=hiking,events" class="dropdown-item">Hiking Events</a>
+                <a href="{% url 'products' %}?category=mud,runs" class="dropdown-item">Mud Runs</a>
             </div>
         </li>
 
@@ -15,8 +15,8 @@
                 Merchandise
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="eventtickets-link">
-                <a href="" class="dropdown-item">Clothing</a>
-                <a href="" class="dropdown-item">Accessoirs</a>
+                <a href="{% url 'products' %}?category=clothing" class="dropdown-item">Clothing</a>
+                <a href="{% url 'products' %}?category=accessoirs" class="dropdown-item">Accessoirs</a>
             </div>
         </li>
     </ul>
