--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -90,7 +90,22 @@ body {
     cursor: pointer;
 }
 
+/* bootstrap toasts */
 
+.message-container {
+    position: fixed;
+    top: 72px;
+    right: 15px;
+    z-index: 9999999;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 2px;
+}
 
 /* -------------------------------- Media Queries */
 
