Correct category links for tickets and set background image

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -5,8 +5,8 @@
                 Tickets
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="eventtickets-link">
-                <a href="{% url 'products' %}?category=hiking,events" class="dropdown-item">Hiking Events</a>
-                <a href="{% url 'products' %}?category=mud,runs" class="dropdown-item">Mud Runs</a>
+                <a href="{% url 'products' %}?category=hikingevents" class="dropdown-item">Hiking Events</a>
+                <a href="{% url 'products' %}?category=mudruns" class="dropdown-item">Mud Runs</a>
             </div>
         </li>
 
