--- a/templates/base.html
+++ b/templates/base.html
@@ -146,11 +146,27 @@
     {% block content %}
     {% endblock %}
 
+
     {% block postloadjs %}
     <script type="text/javascript">
         $('.toast').toast('show');
     </script>
     {% endblock %}
+
+    <!-- Footer -->
+    <footer class="footer mt-auto py-3 dark-bg">
+        <p class="m-0 text-center text-white">For educational purpose only</p>
+        <p class="m-0 text-center text-white">Follow us:
+            <a href="https://www.facebook.com" target="_blank" aria-label="Facebook" rel="noopener nofollow">
+                <i class="fab fa-facebook-square ms-3"></i></a>
+            <a href="https://www.twitter.com" target="_blank" aria-label="Twitter" rel="noopener nofollow">
+                <i class="fab fa-twitter-square ms-3"></i></a>
+            <a href="https://www.instagram.com" target="_blank" aria-label="Instagram" rel="noopener nofollow">
+                <i class="fab fa-instagram-square ms-3"></i></a>
+            <a href="https://www.youtube.com" target="_blank" aria-label="Youtube" rel="noopener nofollow">
+                <i class="fab fa-youtube-square ms-3"></i></a>
+        </p>
+    </footer>
 
 
 </body>
