--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background: url('/media/background.png') no-repeat center center-fixed;
+    background: url('media/background.png') no-repeat center center-fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
@@ -263,6 +263,14 @@ input[name='q']::placeholder {
     background-color: #dc3545;
     border-color: #dc3545;
     border-radius: 0;
+}
+
+/* Footer Styling */
+.footer {
+    background: #212529;
+    background-position: bottom;
+    height: 30vh;
+    color: white;
 }
 
 /* fixed top navbar only on medium and up */
