--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,8 +3,9 @@ html {
 }
 
 body {
-    background-image: url('/media/background.jpg') no-repeat center center-fixed;
+    background: url(media/background.jpg) no-repeat center;
     background-size: cover;
+    background-attachment: fixed;
     height: calc(100vh - 164px);
     color: #555;
     font-family: 'Lato';
