--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -19,5 +19,8 @@
                 <a href="{% url 'products' %}?category=accessoirs" class="dropdown-item">Accessoirs</a>
             </div>
         </li>
+        <li class="nav-item">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'faqs' %}" id="faqs-link">FAQs</a>
+        </li>
     </ul>
 </div>
