--- a/faqs/templates/faqs/faqs.html
+++ b/faqs/templates/faqs/faqs.html
@@ -10,6 +10,7 @@
 {% endblock %}
 
 {% block content %}
+<div class="overlay"></div>
 <body class="d-flex flex-column min-vh-100">
     <header class="mb-auto mt-4">
         <div class="container">
@@ -20,17 +21,15 @@
     <main class="flex-shrink-0">
         <div class="container mt-5">
             {% if faqs %}
-                <div class="accordion" id="faqAccordion">
+                <div class="row row-cols-1 row-cols-md-2 g-4">
                     {% for faq in faqs %}
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="heading{{ faq.id }}">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ faq.id }}" aria-expanded="false" aria-controls="collapse{{ faq.id }}">
-                                    {{ faq.question }}
-                                </button>
-                            </h2>
-                            <div id="collapse{{ faq.id }}" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
-                                <div class="accordion-body">
-                                    {{ faq.answer|linebreaks }}
+                        <div class="col">
+                            <div class="card h-100 border-0 shadow-sm">
+                                <div class="card-header bg-light p-3">
+                                    <h5 class="mb-0">{{ faq.question }}</h5>
+                                </div>
+                                <div class="card-body">
+                                    <p>{{ faq.answer|linebreaks }}</p>
                                 </div>
                             </div>
                         </div>
