--- a/faqs/templates/faqs/faqs.html
+++ b/faqs/templates/faqs/faqs.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load crispy_forms_tags %}
 
 {% block page_header %}
     <div  class="container header-container">
@@ -38,6 +39,19 @@
             {% else %}
                 <p>No FAQs available.</p>
             {% endif %}
+            <div class="row justify-content-center">
+                <div class="col-12 col-md-6 my-5">
+                    <h2>Contact us</h2>
+                    <p>Whether your question is not answered in the FAQs
+                        or you need to cancel a ticket, please fill
+                        out the form below.</p>
+                    <form method="POST">
+                        {{ contact_form | crispy }}
+                        {% csrf_token %}
+                        <button class="btn btn-secondary" type="submit">Submit</button>
+                    </form>
+                </div>
+            </div>
         </div>
     </main>
 {% endblock %}
