--- a/static/css/base.css
+++ b/static/css/base.css
@@ -277,6 +277,14 @@ input[name='q']::placeholder {
     color: white;
 }
 
+/* Mailchimp styling */
+#mc_embed_signup {
+    background: #fff;
+    clear: left;
+    font: 14px Helvetica, Arial, sans-serif;
+    width: 600px;
+}
+
 /* fixed top navbar only on medium and up */
 @media (min-width: 992px) {
     .fixed-top-desktop-only {
