--- a/templates/base.html
+++ b/templates/base.html
@@ -147,28 +147,107 @@
     {% endblock %}
 
 
+
+
+    <!-- Footer -->
+    <footer class="bg-black text-white py-4">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-4 text-center text-md-start mb-3 mb-md-0">
+                    <h4>For educational purpose only</h4>
+                </div>
+            </div>
+
+            <!-- Social media section -->
+            <div class="col-12 col-md-4 text-center mb-3 mb-md-0">
+                <h5 class="text-decoration-underline"><strong>Follow Us</strong></h5>
+                <a href="https://www.facebook.com" target="_blank" class="text-white" aria-label="Facebook"
+                    rel="noopener nofollow">
+                    <i class="fab fa-facebook-square ms-3"></i></a>
+                <a href="https://www.twitter.com" target="_blank" class="text-white" aria-label="Twitter"
+                    rel="noopener nofollow">
+                    <i class="fab fa-twitter-square ms-3"></i></a>
+                <a href="https://www.instagram.com" target="_blank" class="text-white" aria-label="Instagram"
+                    rel="noopener nofollow">
+                    <i class="fab fa-instagram-square ms-3"></i></a>
+                <a href="https://www.youtube.com" target="_blank" class="text-white" aria-label="Youtube"
+                    rel="noopener nofollow">
+                    <i class="fab fa-youtube-square ms-3"></i></a>
+            </div>
+
+            <!-- Newsletter section -->
+            <div class="col-12 col-md-4 text-center text-md-end">
+
+                <h5>Subscribe to our Newsletter</h5>
+                <p>Never miss an event again</p>
+                <!-- Mailchimp signup form here -->
+                    <form
+                        action="https://herokuapp.us17.list-manage.com/subscribe/post?u=4ac6f0ce73c8ce873287ba7bb&amp;id=9e325a62e4&amp;f_id=0049c3e1f0"
+                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                        target="_blank">
+                        <div id="mc_embed_signup_scroll">
+
+                            <div class="mc-field-group"><label for="mce-EMAIL">E-Mail</label><input type="email"
+                                    name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
+                            <div id="mce-responses" class="clear foot">
+                                <div class="response" id="mce-error-response" style="display: none;"></div>
+                                <div class="response" id="mce-success-response" style="display: none;"></div>
+                            </div>
+                            <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                                /* real people should not fill this in and expect good things - do not remove this or
+                                risk form bot signups */
+                                <input type="text" name="b_4ac6f0ce73c8ce873287ba7bb_9e325a62e4" tabindex="-1" value="">
+                            </div>
+                            <div class="optionalParent">
+                                <div class="clear foot">
+                                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
+                                        value="Subscribe">
+                                    <p style="margin: 0px auto;"><a href="http://eepurl.com/i5W9Jo"
+                                            title="Mailchimp – Einfaches, schnelles E-Mail-Marketing"><span
+                                                style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
+                                                    class="refferal_badge"
+                                                    src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                                                    alt="Intuit Mailchimp"
+                                                    style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js">
+                </script>
+                <script type="text/javascript">
+                    (function ($) {
+                        window.fnames = new Array();
+                        window.ftypes = new Array();
+                        fnames[0] = 'EMAIL';
+                        ftypes[0] = 'email';
+                        fnames[1] = 'FNAME';
+                        ftypes[1] = 'text';
+                        fnames[2] = 'LNAME';
+                        ftypes[2] = 'text';
+                        fnames[3] = 'ADDRESS';
+                        ftypes[3] = 'address';
+                        fnames[4] = 'PHONE';
+                        ftypes[4] = 'phone';
+                        fnames[5] = 'BIRTHDAY';
+                        ftypes[5] = 'birthday';
+                        fnames[6] = 'COMPANY';
+                        ftypes[6] = 'text';
+                    }(jQuery));
+                    var $mcj = jQuery.noConflict(true);
+                </script>
+            </div>
+
+        </div>
+    </footer>
+
     {% block postloadjs %}
     <script type="text/javascript">
         $('.toast').toast('show');
     </script>
     {% endblock %}
-
-    <!-- Footer -->
-    <footer class="footer mt-auto py-3 dark-bg">
-        <p class="m-0 text-center text-white">For educational purpose only</p>
-        <p class="m-0 text-center text-white">Follow us:
-            <a href="https://www.facebook.com" target="_blank" aria-label="Facebook" rel="noopener nofollow">
-                <i class="fab fa-facebook-square ms-3"></i></a>
-            <a href="https://www.twitter.com" target="_blank" aria-label="Twitter" rel="noopener nofollow">
-                <i class="fab fa-twitter-square ms-3"></i></a>
-            <a href="https://www.instagram.com" target="_blank" aria-label="Instagram" rel="noopener nofollow">
-                <i class="fab fa-instagram-square ms-3"></i></a>
-            <a href="https://www.youtube.com" target="_blank" aria-label="Youtube" rel="noopener nofollow">
-                <i class="fab fa-youtube-square ms-3"></i></a>
-        </p>
-    </footer>
-
-
 </body>
 
 </html>
