--- a/faqs/templates/faqs/faqs.html
+++ b/faqs/templates/faqs/faqs.html
@@ -11,11 +11,10 @@
 {% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
 <body class="d-flex flex-column min-vh-100">
     <header class="mb-auto mt-4">
         <div class="container">
-            <h1 class="display-4 fw-bold mb-3">Frequently Asked Questions</h1>
+            <h1 class="display-4 fw-bold text-black mb-3">Frequently Asked Questions</h1>
         </div>
     </header>
 
@@ -25,7 +24,7 @@
                 <div class="row row-cols-1 row-cols-md-2 g-4">
                     {% for faq in faqs %}
                         <div class="col">
-                            <div class="card h-100 border-0 shadow-sm">
+                            <div class="card h-100 border-0 shadow-sm faq-card">
                                 <div class="card-header bg-light p-3">
                                     <h5 class="mb-0">{{ faq.question }}</h5>
                                 </div>
@@ -40,7 +39,7 @@
                 <p>No FAQs available.</p>
             {% endif %}
             <div class="row justify-content-center">
-                <div class="col-12 col-md-6 my-5">
+                <div class="col-12 col-md-6 my-5 text-black">
                     <h2>Contact us</h2>
                     <p>Whether your question is not answered in the FAQs
                         or you need to cancel a ticket, please fill
@@ -48,7 +47,7 @@
                     <form method="POST">
                         {{ contact_form | crispy }}
                         {% csrf_token %}
-                        <button class="btn btn-secondary" type="submit">Submit</button>
+                        <button class="btn btn-secondary btn-black" type="submit">Submit</button>
                     </form>
                 </div>
             </div>
