--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Outdoor events for real outdoor queens">
+    <meta name="keywords" content="outdoor sports, mud runs, women only hiking, women only sport events, obstacle runs, outdoor merchandise">
     {% endblock %}
 
     {% block extra_meta %}
@@ -51,7 +53,7 @@
         <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
                 <a href="{% url 'home' %}" class="nav-link main-logo-link">
-                    <h2 class="logo-font text-black my-0">Outdoor <strong>Queens</strong></h2>
+                    <h2 class="logo-font text-black my-0"><strong>Outdoor<span style="color: goldenrod;"> Queens</span></strong></h2>
                 </a>
             </div>
             <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
@@ -121,31 +123,38 @@
             </nav>
         </div>
     </header>
-
-    {% if messages %}
-    <div class="message-container">
-        {% for message in messages %}
-        {% with message.level as level %}
-        {% if level == 40 %}
-        {% include 'includes/toasts/toast_error.html' %}
-        {% elif level == 30 %}
-        {% include 'includes/toasts/toast_warning.html' %}
-        {% elif level == 25 %}
-        {% include 'includes/toasts/toast_success.html' %}
-        {% else %}
-        {% include 'includes/toasts/toast_info.html' %}
+    <main class="flex-grow-1">
+        {% if messages %}
+        <div class="message-container">
+            {% for message in messages %}
+            {% with message.level as level %}
+            {% if level == 40 %}
+            {% include 'includes/toasts/toast_error.html' %}
+            {% elif level == 30 %}
+            {% include 'includes/toasts/toast_warning.html' %}
+            {% elif level == 25 %}
+            {% include 'includes/toasts/toast_success.html' %}
+            {% else %}
+            {% include 'includes/toasts/toast_info.html' %}
+            {% endif %}
+            {% endwith %}
+            {% endfor %}
+        </div>
         {% endif %}
-        {% endwith %}
-        {% endfor %}
-    </div>
-    {% endif %}
 
-    {% block page_header %}
-    {% endblock %}
+        {% block page_header %}
+        {% endblock %}
 
-    {% block content %}
-    {% endblock %}
+        {% block content %}
+        {% endblock %}
 
+        {% block postloadjs %}
+        <script type="text/javascript">
+            $('.toast').toast('show');
+        </script>
+        {% endblock %}
+
+    </main>
 
 
 
@@ -161,18 +170,20 @@
             <!-- Social media section -->
             <div class="col-12 col-md-4 text-center mb-3 mb-md-0">
                 <h5 class="text-decoration-underline"><strong>Follow Us</strong></h5>
-                <a href="https://www.facebook.com" target="_blank" class="text-white" aria-label="Facebook"
-                    rel="noopener nofollow">
-                    <i class="fab fa-facebook-square ms-3"></i></a>
-                <a href="https://www.twitter.com" target="_blank" class="text-white" aria-label="Twitter"
-                    rel="noopener nofollow">
-                    <i class="fab fa-twitter-square ms-3"></i></a>
-                <a href="https://www.instagram.com" target="_blank" class="text-white" aria-label="Instagram"
-                    rel="noopener nofollow">
-                    <i class="fab fa-instagram-square ms-3"></i></a>
-                <a href="https://www.youtube.com" target="_blank" class="text-white" aria-label="Youtube"
-                    rel="noopener nofollow">
-                    <i class="fab fa-youtube-square ms-3"></i></a>
+                <ul class="list-inline">
+                    <li class="list-inline-item"><a href="https://www.facebook.com" target="_blank" class="text-white"
+                            aria-label="Facebook" rel="noopener nofollow">
+                            <i class="fab fa-facebook-square ms-3"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.twitter.com" target="_blank" class="text-white"
+                            aria-label="Twitter" rel="noopener nofollow">
+                            <i class="fab fa-twitter-square ms-3"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.instagram.com" target="_blank" class="text-white"
+                            aria-label="Instagram" rel="noopener nofollow">
+                            <i class="fab fa-instagram-square ms-3"></i></a></li>
+                    <li class="list-inline-item"><a href="https://www.youtube.com" target="_blank" class="text-white"
+                            aria-label="Youtube" rel="noopener nofollow">
+                            <i class="fab fa-youtube-square ms-3"></i></a></li>
+                </ul>
             </div>
 
             <!-- Newsletter section -->
@@ -181,73 +192,69 @@
                 <h5>Subscribe to our Newsletter</h5>
                 <p>Never miss an event again</p>
                 <!-- Mailchimp signup form here -->
-                    <form
-                        action="https://herokuapp.us17.list-manage.com/subscribe/post?u=4ac6f0ce73c8ce873287ba7bb&amp;id=9e325a62e4&amp;f_id=0049c3e1f0"
-                        method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
-                        target="_blank">
-                        <div id="mc_embed_signup_scroll">
+                <form
+                    action="https://herokuapp.us17.list-manage.com/subscribe/post?u=4ac6f0ce73c8ce873287ba7bb&amp;id=9e325a62e4&amp;f_id=0049c3e1f0"
+                    method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"
+                    target="_blank">
+                    <div id="mc_embed_signup_scroll">
 
-                            <div class="mc-field-group"><label for="mce-EMAIL">E-Mail</label><input type="email"
-                                    name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
-                            <div id="mce-responses" class="clear foot">
-                                <div class="response" id="mce-error-response" style="display: none;"></div>
-                                <div class="response" id="mce-success-response" style="display: none;"></div>
-                            </div>
-                            <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                                /* real people should not fill this in and expect good things - do not remove this or
-                                risk form bot signups */
-                                <input type="text" name="b_4ac6f0ce73c8ce873287ba7bb_9e325a62e4" tabindex="-1" value="">
-                            </div>
-                            <div class="optionalParent">
-                                <div class="clear foot">
-                                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
-                                        value="Subscribe">
-                                    <p style="margin: 0px auto;"><a href="http://eepurl.com/i5W9Jo"
-                                            title="Mailchimp – Einfaches, schnelles E-Mail-Marketing"><span
-                                                style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
-                                                    class="refferal_badge"
-                                                    src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
-                                                    alt="Intuit Mailchimp"
-                                                    style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
-                                    </p>
-                                </div>
+                        <div class="mc-field-group"><label for="mce-EMAIL">E-Mail</label><input type="email"
+                                name="EMAIL" class="required email" id="mce-EMAIL" required="" value=""></div>
+                        <div id="mce-responses" class="clear foot">
+                            <div class="response" id="mce-error-response" style="display: none;"></div>
+                            <div class="response" id="mce-success-response" style="display: none;"></div>
+                        </div>
+                        <div aria-hidden="true" style="position: absolute; left: -5000px;">
+                            /* real people should not fill this in and expect good things - do not remove this or
+                            risk form bot signups */
+                            <input type="text" name="b_4ac6f0ce73c8ce873287ba7bb_9e325a62e4" tabindex="-1" value="">
+                        </div>
+                        <div class="optionalParent">
+                            <div class="clear foot">
+                                <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button"
+                                    value="Subscribe">
+                                <p style="margin: 0px auto;"><a href="http://eepurl.com/i5W9Jo"
+                                        title="Mailchimp – Einfaches, schnelles E-Mail-Marketing"><span
+                                            style="display: inline-block; background-color: transparent; border-radius: 4px;"><img
+                                                class="refferal_badge"
+                                                src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                                                alt="Intuit Mailchimp"
+                                                style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;"></span></a>
+                                </p>
                             </div>
                         </div>
-                    </form>
-                </div>
-                <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js">
-                </script>
-                <script type="text/javascript">
-                    (function ($) {
-                        window.fnames = new Array();
-                        window.ftypes = new Array();
-                        fnames[0] = 'EMAIL';
-                        ftypes[0] = 'email';
-                        fnames[1] = 'FNAME';
-                        ftypes[1] = 'text';
-                        fnames[2] = 'LNAME';
-                        ftypes[2] = 'text';
-                        fnames[3] = 'ADDRESS';
-                        ftypes[3] = 'address';
-                        fnames[4] = 'PHONE';
-                        ftypes[4] = 'phone';
-                        fnames[5] = 'BIRTHDAY';
-                        ftypes[5] = 'birthday';
-                        fnames[6] = 'COMPANY';
-                        ftypes[6] = 'text';
-                    }(jQuery));
-                    var $mcj = jQuery.noConflict(true);
-                </script>
+                    </div>
+                </form>
             </div>
+            <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js">
+            </script>
+            <script type="text/javascript">
+                (function ($) {
+                    window.fnames = new Array();
+                    window.ftypes = new Array();
+                    fnames[0] = 'EMAIL';
+                    ftypes[0] = 'email';
+                    fnames[1] = 'FNAME';
+                    ftypes[1] = 'text';
+                    fnames[2] = 'LNAME';
+                    ftypes[2] = 'text';
+                    fnames[3] = 'ADDRESS';
+                    ftypes[3] = 'address';
+                    fnames[4] = 'PHONE';
+                    ftypes[4] = 'phone';
+                    fnames[5] = 'BIRTHDAY';
+                    ftypes[5] = 'birthday';
+                    fnames[6] = 'COMPANY';
+                    ftypes[6] = 'text';
+                }(jQuery));
+                var $mcj = jQuery.noConflict(true);
+            </script>
+        </div>
 
         </div>
     </footer>
 
-    {% block postloadjs %}
-    <script type="text/javascript">
-        $('.toast').toast('show');
-    </script>
-    {% endblock %}
+
 </body>
 
 </html>
