--- a/faqs/templates/faqs/faqs.html
+++ b/faqs/templates/faqs/faqs.html
@@ -23,7 +23,7 @@
             {% if faqs %}
                 <div class="row row-cols-1 row-cols-md-2 g-4">
                     {% for faq in faqs %}
-                        <div class="col">
+                        <div class="col p-3">
                             <div class="card h-100 border-0 shadow-sm faq-card">
                                 <div class="card-header bg-light p-3">
                                     <h5 class="mb-0">{{ faq.question }}</h5>
