--- a/templates/500.html
+++ b/templates/500.html
@@ -17,12 +17,12 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo font mb-4">Error: 500 Internal Server Error</h2>
+                <h2 class="logo font mb-4 text-black">Error: 500 Internal Server Error</h2>
                 <hr>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-lg-6 rounded-4 py-3 mb-3">
+            <div class="col-12 col-lg-6 rounded-4 py-3 mb-3 text-black">
                 <p>Oops. The server encountered an error and cannot complete your request at this time.</p>
                 <a href="{% url 'home' %}" class="btn btn-outline-black rounded-0">Home</a>
             </div>
