--- a/templates/500.html
+++ b/templates/500.html
@@ -17,7 +17,7 @@
         <div class="row">
             <div class="col">
                 <hr>
-                <h2 class="logo font mb-4 text-black">Error: 500 Internal Server Error</h2>
+                <h2 class="logo-font mb-4 text-black">Error: 500 Internal Server Error</h2>
                 <hr>
             </div>
         </div>
