--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,9 @@
         content="outdoor sports, mud runs, women only hiking, women only sport events, obstacle runs, outdoor merchandise">
     {% endblock %}
 
+    <!-- Favicon -->
+     <link rel="icon" href="{% static 'images/favicon/favicon.ico' %}" type="image/x-icon">
+
     {% block extra_meta %}
     {% endblock %}
 
