--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -16,7 +16,7 @@
         </li>
 
         <li class="nav-item dropdown">
-            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="eventtickets-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="merchandise-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Merchandise
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="eventtickets-link">
