--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -33,6 +33,25 @@
             </form>
         </div>
         <div class="col-12 col-lg-6">
+            <p class="text-muted">My Wishlist</p>
+            {% if wishlist_items %}
+            <div class="wishlist">
+                <ul class="list-unstyled">
+                    {% for item in wishlist_items %}
+                        <li class="mb-2">
+                            <a href="{% url 'product_detail' item.product.id %}">{{ item.product.name }}</a>
+                            <a href="{% url 'toggle_wishlist' item.product.id %}" class="btn btn-sm btn-danger">Remove from Wishlist</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% else %}
+                <p>Your wishlist is empty.</p>
+            {% endif %}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-lg-6">
             <p class="text-muted">Order History</p>
             <div class="order-history table-responsive">
                 <table class="table table-sm table-borderless">
@@ -73,6 +92,7 @@
             </div>
         </div>
     </div>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
